--- a/custom_components/dht11/manifest.json
+++ b/custom_components/dht11/manifest.json
@@ -8,6 +8,8 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/richardzone/homeassistant-dht11/issues",
   "requirements": [
+    "setuptools",
+    "wheel",
     "Adafruit-DHT==1.4.0"
   ],
   "version": "2022.4.0"
